	Trade alerts suspended when an AI refuses to talk
	TODO: Alert when an AI stops refusing to talk

Bug Fixes:

- BUFFY and Single-Player BUG can coexist; set NoCustomAssets to 1 in BUFFY's INI file
- Main Interface
	Moved the Tech text down 2 pixels so that it now lines up with the GG and GP bars
	Era Text and Great Person Bar hidden in Hide Interface and WorldBuilder modes
- Scoreboard
	Number of cities hidden in OCC and for rivals you cannot contact
- City Screen
	Production bar tick marks count food for Workers/Settlers correctly
	Anger Counter hidden for foreign cities because you cannot see Whip/Draft button hovers
- Customizable Domestic Advisor (F1)
	Culture levels under No Espionage are now correct
- Technology Advisor (F6)
	Great Person Bulbed Techs are reset when a game is started or loaded
- Info Screen (F9)
	Projects List
		Hover shows project instead of building; click goes to correct Civilopedia entry
		Completed projects no longer show an invalid date or city name
- MapFinder
	Status panel title displays correctly
- Unit Naming
	Default naming convention matches new unit counting codes
- Logger
	File name and path changes take effect immediately
	Suppresses the nationality of rival Privateers


MODDING

New Features:

- AttitudeUtil
	Added functions to determine worst enemies
- BugUtil
	Added escapeXml() to replace <, >, and & with their XML entities
- DiplomacyUtil
	Added functions to detect when a rival refuses to talk
- ReligionUtil
	Makes adding religions and new types of religious buildings/units to the Religion Advisor a snap
- TradeUtil
	Added functions to get lists of valid trading partners for the different tradable items

Improvements:

- BugEventManager
	Exceptions from event handlers are caught and logged, and the next handler is called
- BugGameUtils
	Each callback's dispatch logging is now optional via "log" XML attribute
- GameUtil
	Added checks for more game options used by diplomacy/trade changes
- GPUtil