@@ -37,7 +37,8 @@ Bug Fixes:
 	Moved the Tech text down 2 pixels so that it now lines up with the GG and GP bars
 	Era Text and Great Person Bar hidden in Hide Interface and WorldBuilder modes
 - Scoreboard
-	Number of cities hidden in OCC and for rivals you cannot contact
+	Number of cities counts only the ones you can see on the map (plus their capital) when you can't see a rival's city list
+	Rival city lists cannot be seen when you cannot contact them and for OCC games
 - City Screen
 	Production bar tick marks count food for Workers/Settlers correctly
 	Anger Counter hidden for foreign cities because you cannot see Whip/Draft button hovers
